These are the files which were finally submitted in fulfillment of cs50's homepage assignment.
	modified:   bar.html
	modified:   baz.html
	modified:   index.html
	modified:   index_scripts.js
	modified:   specification.txt
	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,17 @@
     color: darkorange;
     font-weight: bold;
 }
+.errorResponse{
+    background-color: red;
+    font-weight: bold;
+}
+.validResponse{
+    background-color: aliceblue;
+    //font-weight: bold;
+}
+h1{
+    font-weight: bolder;
+}
+h2{
+    text-align:center;
+}
